@@ -3,7 +3,13 @@ package uk.gov.hmcts.reform.preapi.batch.util;
 import lombok.experimental.UtilityClass;
 import uk.gov.hmcts.reform.preapi.batch.config.Constants;
 
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeParseException;
 import java.util.HashSet;
+import java.util.Locale;
+import java.util.Optional;
 import java.util.Set;
 
 @UtilityClass
@@ -20,7 +26,7 @@ public class RecordingUtils {
             return "ORIG";
         }
 
-        String upper = input.trim().toUpperCase();
+        String upper = input.trim().toUpperCase(Locale.UK);
         if (Constants.VALID_ORIG_TYPES.contains(upper)) {
             return "ORIG";
         }
@@ -31,23 +37,19 @@ public class RecordingUtils {
     }
 
     public int getStandardizedVersionNumberFromType(String recordingVersion) {
-        return Constants.VALID_ORIG_TYPES.contains(recordingVersion.toUpperCase()) ? 1 : 2;
+        return Constants.VALID_ORIG_TYPES.contains(recordingVersion.toUpperCase(Locale.UK)) ? 1 : 2;
     }
 
     public String getValidVersionNumber(String versionNumStr) {
-        return (versionNumStr == null || versionNumStr.trim().isEmpty()) ? "1" : versionNumStr.trim();
+        return (versionNumStr == null || versionNumStr.isBlank()) ? "1" : versionNumStr.trim();
     }
 
-    public int compareVersionStrings(String v1, String v2) {
-        if (v1 == null || v1.isBlank()) {
-            v1 = "0";
-        }
-        if (v2 == null || v2.isBlank()) {
-            v2 = "0";
-        }
+    public int compareVersionStrings(final String v1, final String v2) {
+        final String versionString1 = v1 == null || v1.isBlank() ? "0" : v1;
+        final String versionString2 = v2 == null || v2.isBlank() ? "0" : v2;
 
-        String[] v1Parts = v1.split("\\.");
-        String[] v2Parts = v2.split("\\.");
+        final String[] v1Parts = versionString1.split("\\.");
+        final String[] v2Parts = versionString2.split("\\.");
 
         int length = Math.max(v1Parts.length, v2Parts.length);
         for (int i = 0; i < length; i++) {
@@ -69,6 +71,38 @@ public class RecordingUtils {
             return Integer.parseInt(part.replaceAll("[^0-9]", ""));
         } catch (NumberFormatException e) {
             return 0;
+        }
+    }
+
+    public static Optional<LocalDateTime> parseDatePatternToLocalDateTime(String datePattern) {
+        if (datePattern == null || datePattern.isBlank()) {
+            return Optional.empty();
+        }
+        String trimmed = datePattern.trim();
+        try {
+            if (trimmed.matches("\\d{6}")) {
+                LocalDate date = LocalDate.parse(trimmed, DateTimeFormatter.ofPattern("yyMMdd"));
+                return Optional.of(date.atTime(12, 0));
+            }
+            if (trimmed.matches("\\d{2}-\\d{2}-\\d{4}-\\d{4}")) {
+                return Optional.of(LocalDateTime.parse(trimmed,
+                    DateTimeFormatter.ofPattern("dd-MM-yyyy-HHmm")));
+            }
+            if (trimmed.matches("\\d{2}-\\d{2}-\\d{4}")) {
+                LocalDate date = LocalDate.parse(trimmed, DateTimeFormatter.ofPattern("dd-MM-yyyy"));
+                return Optional.of(date.atTime(12, 0));
+            }
+            if (trimmed.matches("\\d{2}/\\d{2}/\\d{4}")) {
+                LocalDate date = LocalDate.parse(trimmed, DateTimeFormatter.ofPattern("dd/MM/yyyy"));
+                return Optional.of(date.atTime(12, 0));
+            }
+            if (trimmed.matches("\\d{2}\\.\\d{2}\\.\\d{4}")) {
+                LocalDate date = LocalDate.parse(trimmed, DateTimeFormatter.ofPattern("dd.MM.yyyy"));
+                return Optional.of(date.atTime(12, 0));
+            }
+            return Optional.empty();
+        } catch (DateTimeParseException e) {
+            return Optional.empty();
         }
     }
 
